--- a/server/Ballerina.toml
+++ b/server/Ballerina.toml
@@ -2,7 +2,7 @@
 org = "ayash"
 name = "GraphQL_Over_WebSocket_Protocol"
 version = "0.1.0"
-distribution = "2201.11.0-20250127-101700-a4b67fe5"
+distribution = "2201.11.0"
 
 [build-options]
 observabilityIncluded = true
