Use dispatcherStreamId for subscribe operation

--- a/server/graphql_over_websocket_asyncapi.yaml
+++ b/server/graphql_over_websocket_asyncapi.yaml
@@ -258,6 +258,7 @@ components:
         - $ref: '#/components/messages/SubscriberAlreadyExists'
       x-response-type: server-streaming
 x-dispatcherKey: type
+x-dispatcherStreamId: id
 x-ballerina-ws-closeframe:
   type: body
   path: event.frametype
